2005-04-06  Tim Jenness  <timj@jach.hawaii.edu>

	* lib/Astro/Coords/Elements.pm (apparent): Include the target name
	in the error message when failing to determine the apparent RA/Dec.

2005-03-16  Tim Jenness  <timj@jach.hawaii.edu>

	* t/basic.t: Test the array Elements constructor

	* lib/Astro/Coords.pm (new): Document upgrade to elements
	interface to accept array() and enhance the test for that case.

	* lib/Astro/Coords/Elements.pm (new): Now allow the return value
	from the array() method to be provided to the constructor.
	
	* lib/Astro/Coords/Elements.pm (array): For comets, now return the
	epoch of perihelion as the final member of the array and the epoch
	of elements as the initial element in the array. This allows both
	epochs to be retained without confusion (since the penultimate
	member will be undefined for the cometary case) but constitutes a
	change in the published interface.
	
	* lib/Astro/Coords/Elements.pm (apparent): Include the target name
	in the error message when failing to perturb the elements.

2005-02-21  Tim Jenness  <tjenness@cpan.org>

	---- RELEASE V0.10 to CPAN ----

2005-02-18  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm: Rewrite the rise/set iterative code to
	handle all cases properly. Add new parameter "event" to control
	whether the nearest, previous or next rise/set time should be
	returned.

2005-02-16  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Angle.pm (_guess_units): Use Scalar::Util to
	determine whether the supplied string is a number. Now requires
	Scalar::Util v1.13

2005-02-14  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* lib/Astro/Coords/Angle.pm, lib/Astro/Coords/Angle/Hour.pm:
	Change default delimiter to the colon character to maintain
	backwards compatibility with v0.05.

2005-02-04  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm (_iterative_el): Fix case when moon almost
	sets but doesn't quite make it (thanks for bug report from Beat
	Vontobel)
